--- a/data/conf.d/example01.com.conf
+++ b/data/conf.d/example01.com.conf
@@ -16,7 +16,7 @@ server {
   root /home/www/example01/;
 
   ssl_certificate /etc/letsencrypt/live/$host/fullchain.pem;
-  ssl_certificate_key etc/letsencrypt/live/$host/privkey.pem;
+  ssl_certificate_key /etc/letsencrypt/live/$host/privkey.pem;
 
   if ($request_uri = /index.html) {
      return 301 https://example01.com;
